@@ -20,12 +20,14 @@ import java.io.ByteArrayOutputStream;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.util.Arrays;
+import java.util.Date;
 import java.util.Locale;
-
-import org.joda.time.chrono.BuddhistChronology;
 
 import junit.framework.TestCase;
 import junit.framework.TestSuite;
+
+import org.joda.time.chrono.BuddhistChronology;
+import org.joda.time.chrono.GregorianChronology;
 
 /**
  * This class is a Junit unit test for TimeOfDay.
@@ -240,6 +242,109 @@ public class TestTimeOfDay_Basics extends TestCase {
         }
     }
 
+    //-----------------------------------------------------------------------
+    public void testCompareTo() {
+        TimeOfDay test1 = new TimeOfDay(10, 20, 30, 40);
+        TimeOfDay test1a = new TimeOfDay(10, 20, 30, 40);
+        assertEquals(0, test1.compareTo(test1a));
+        assertEquals(0, test1a.compareTo(test1));
+        assertEquals(0, test1.compareTo(test1));
+        assertEquals(0, test1a.compareTo(test1a));
+        
+        TimeOfDay test2 = new TimeOfDay(10, 20, 35, 40);
+        assertEquals(-1, test1.compareTo(test2));
+        assertEquals(+1, test2.compareTo(test1));
+        
+        TimeOfDay test3 = new TimeOfDay(10, 20, 35, 40, GregorianChronology.getInstanceUTC());
+        assertEquals(-1, test1.compareTo(test3));
+        assertEquals(+1, test3.compareTo(test1));
+        assertEquals(0, test3.compareTo(test2));
+        
+        assertEquals(+1, test2.compareTo(new MockInstant()));
+        assertEquals(0, test1.compareTo(new MockInstant()));
+        
+        try {
+            test1.compareTo(null);
+            fail();
+        } catch (NullPointerException ex) {}
+        try {
+            test1.compareTo(new Date());
+            fail();
+        } catch (ClassCastException ex) {}
+    }
+    
+    //-----------------------------------------------------------------------
+    public void testIsEqual_TOD() {
+        TimeOfDay test1 = new TimeOfDay(10, 20, 30, 40);
+        TimeOfDay test1a = new TimeOfDay(10, 20, 30, 40);
+        assertEquals(true, test1.isEqual(test1a));
+        assertEquals(true, test1a.isEqual(test1));
+        assertEquals(true, test1.isEqual(test1));
+        assertEquals(true, test1a.isEqual(test1a));
+        
+        TimeOfDay test2 = new TimeOfDay(10, 20, 35, 40);
+        assertEquals(false, test1.isEqual(test2));
+        assertEquals(false, test2.isEqual(test1));
+        
+        TimeOfDay test3 = new TimeOfDay(10, 20, 35, 40, GregorianChronology.getInstanceUTC());
+        assertEquals(false, test1.isEqual(test3));
+        assertEquals(false, test3.isEqual(test1));
+        assertEquals(true, test3.isEqual(test2));
+        
+        try {
+            new TimeOfDay(10, 20, 35, 40).isEqual(null);
+            fail();
+        } catch (IllegalArgumentException ex) {}
+    }
+    
+    //-----------------------------------------------------------------------
+    public void testIsBefore_TOD() {
+        TimeOfDay test1 = new TimeOfDay(10, 20, 30, 40);
+        TimeOfDay test1a = new TimeOfDay(10, 20, 30, 40);
+        assertEquals(false, test1.isBefore(test1a));
+        assertEquals(false, test1a.isBefore(test1));
+        assertEquals(false, test1.isBefore(test1));
+        assertEquals(false, test1a.isBefore(test1a));
+        
+        TimeOfDay test2 = new TimeOfDay(10, 20, 35, 40);
+        assertEquals(true, test1.isBefore(test2));
+        assertEquals(false, test2.isBefore(test1));
+        
+        TimeOfDay test3 = new TimeOfDay(10, 20, 35, 40, GregorianChronology.getInstanceUTC());
+        assertEquals(true, test1.isBefore(test3));
+        assertEquals(false, test3.isBefore(test1));
+        assertEquals(false, test3.isBefore(test2));
+        
+        try {
+            new TimeOfDay(10, 20, 35, 40).isBefore(null);
+            fail();
+        } catch (IllegalArgumentException ex) {}
+    }
+    
+    //-----------------------------------------------------------------------
+    public void testIsAfter_TOD() {
+        TimeOfDay test1 = new TimeOfDay(10, 20, 30, 40);
+        TimeOfDay test1a = new TimeOfDay(10, 20, 30, 40);
+        assertEquals(false, test1.isAfter(test1a));
+        assertEquals(false, test1a.isAfter(test1));
+        assertEquals(false, test1.isAfter(test1));
+        assertEquals(false, test1a.isAfter(test1a));
+        
+        TimeOfDay test2 = new TimeOfDay(10, 20, 35, 40);
+        assertEquals(false, test1.isAfter(test2));
+        assertEquals(true, test2.isAfter(test1));
+        
+        TimeOfDay test3 = new TimeOfDay(10, 20, 35, 40, GregorianChronology.getInstanceUTC());
+        assertEquals(false, test1.isAfter(test3));
+        assertEquals(true, test3.isAfter(test1));
+        assertEquals(false, test3.isAfter(test2));
+        
+        try {
+            new TimeOfDay(10, 20, 35, 40).isAfter(null);
+            fail();
+        } catch (IllegalArgumentException ex) {}
+    }
+    
     //-----------------------------------------------------------------------
     public void testWithChronologyRetainFields_Chrono() {
         TimeOfDay base = new TimeOfDay(10, 20, 30, 40, COPTIC_PARIS);
